# alyra-ai-dl

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  MEMORY.md  README.md  Taskfile.yml  analyze_training_logs.py  augmentation_templates_en.json  chainlit.md  main.py  model_tester.py  pyproject.toml  use_model.py
.chainlit/: config.toml
.claude/commands/: add-decision.md  add-question.md  add-session.md  add-todo.md  update-memory.md
apps/: README.md  api.py  chainlit_app.py  cli.py  llm_processor.py  streamlit_app.py
data/: test_cases.json
notebooks/: eda_cleaned_dataset.ipynb  eda_dataset_original_kaggle.ipynb
scripts/data/: prepare_dataset.py
scripts/training/: train_model.py  train_model_recall.py  train_standard.py
src/alyra_ai_dl/: __init__.py
src/alyra_ai_dl/apps/: README.md  __init__.py  chainlit_app.py  cli.py  llm_processor.py  streamlit_app.py
src/alyra_ai_dl/core/: __init__.py  device.py  model.py
src/alyra_ai_dl/inference/: __init__.py  pipeline.py
src/alyra_ai_dl/visualization/: __init__.py  metrics.py
