[project]
name = "alyra-ai-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    {name = "Stéphane Wirtel", email = "stephane.wirtel@mgx.io"}
]

[dependency-groups]
dev = [
    "lightning-sdk>=2025.12.9",
    "packaging>=25.0",
    "pip>=25.3",
    "ruff>=0.14.8",
    "uv>=0.9.17",
    "validate-pyproject>=0.24.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["alyra_ai_dl"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
